Infra/redis/redis-insight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: redis
  labels:
    resource-name: redis-insight
spec:
  replicas: 1
  selector:
    matchLabels:
      resource-name: redis-insight
  template:
    metadata:
      namespace: redis
      name: redisinsight
      labels:
        resource-namespace: jebsen
        resource-name: redis-insight
        internal-traffic: 'true'
    spec:
      containers:
      - name:  redisinsight
        image: redislabs/redisinsight:1.9.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8001
          protocol: TCP
        volumeMounts:
        - name: db
          mountPath: /db
      securityContext:
        runAsUser: 0
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: redisinsight-data
