Infra/redis/redis-insight-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
   app: redisinsight
  name: redisinsight
  namespace: redis
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8001
  selector:
    resource-name: redis-insight
