Infra/redis/redis-insight-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisinsight
  namespace: redis
  annotations: 
   kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /redis
        pathType: Prefix
        backend:
          service:
            name: redisinsight
            port:
              number: 8080
